[package]
name = "rendering4d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
cgmath = "0.18.0"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
encase = { version = "0.9.0", features = ["cgmath"] }
rand = "0.8.5"
